--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta htt-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>{{ page.title }}</title>
-		
+		<meta name="author" content="Jonathan Bennett" />
 		<link rel="author" href="humans.txt" />
+		
+		<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+		<link rel="stylesheet" href="/css/screen.css" type="text/css" />
 	</head>
 
 	<body>
-		<h1>{{ page.title }}</h1>
-		
-		{{ content }}
+		<div class="site">
+			<div class="sitename">
+				<a href="/">Jonathan Bennett</a>
+			</div>
+			
+			<div class="column width25">
+				<div class="panel">
+					<ul class="vmenu">
+						<li><a href="/">Home</a></li>
+						<li><a href="/">Posts</a></li>
+						<li><a href="/">Github</a></li>
+						<li><a href="/">Portfolio</a></li>
+					</ul>
+				</div>
+				
+				<div class="panel">
+					<h2>Latest Posts</h2>
+					
+					<ul class="vmenu">
+						<li><a href="#">Title</a> - July 21</li>
+						<li><a href="#">Title</a> - July 05</li>
+						<li><a href="#">Title</a> - June 27</li>
+					</ul>
+				</div>
+			</div>
+			
+			<div class="body width75">
+				{{ content }}
+			</div>
+			
+			<div class="footer">
+				<ul class="hmenu">
+					<li><a href="http://github.com/jbennett/">github.com/jbennett</a></li>
+					<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
+				</ul>
+			</div>
+		</div>
 	</body>
 </html>
