--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="site">
 			<div class="sitename">
-				<a href="/">Jonathan Bennett</a>
+				<a href="/">Jonathan<br/>Bennett</a>
 			</div>
 			
 			<div class="column width25">
