Changed title, fixed footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="site">
 			<div class="sitename">
-				<a href="/">Jonathan<br/>Bennett</a>
+				<a href="/">Jonathan Bennett</a>
 			</div>
 			
 			<div class="column width25">
@@ -41,7 +41,7 @@
 				{{ content }}
 			</div>
 			
-			<div class="footer">
+			<div class="footer clear">
 				<ul class="hmenu">
 					<li><a href="http://github.com/jbennett/">github.com/jbennett</a></li>
 					<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
