--- a/css/screen.css
+++ b/css/screen.css
@@ -11,7 +11,8 @@ body {
 
 .sitename a {
 	color: #64728D;
-	font-size: 20px;
+	font-size: 80px;
+	text-decoration: none;
 	text-shadow: 1px 1px 1px #AAA;
 }
 .sitename a:hover { }
@@ -42,22 +43,22 @@ body {
 }
 
 /* menus */
-ul.hmenu {
+ul.vmenu {
 	list-style: none;
 	margin: 0;
 }
 
-ul.hmenu li {
+ul.vmenu li {
 	
 }
 
-ul.vmenu {
+ul.hmenu {
 	list-style: none;
 	margin: 0;
 	text-align: center;
 }
 
-ul.vmenu li {
+ul.hmenu li {
 	display: inline-block;
 	*display: inline;
 	padding: 0 10px;
