Updated footer and links styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,10 @@
 			</div>
 			
 			<div class="footer clear">
+				Contact Me:
 				<ul class="hmenu">
+					<li><a href="mailto:jbennett@ccistudios.com">jbennett@ccistudios.com</a></li>
+					<li><a href="mailto:me@jbennett.me">me@jbennett.me</a></li>
 					<li><a href="http://github.com/jbennett/">github.com/jbennett</a></li>
 					<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
 				</ul>
