Fixed more footer issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,9 @@
 				{{ content }}
 			</div>
 			
-			<div class="footer clear">
+			<div class="clear"></div>
+			
+			<div class="footer">
 				Contact Me:
 				<ul class="hmenu">
 					<li><a href="mailto:jbennett@ccistudios.com">jbennett@ccistudios.com</a></li>
