--- a/css/screen.css
+++ b/css/screen.css
@@ -7,6 +7,7 @@ body {
 a { 
 	color: #64728D; 
 	border-bottom: 1px dotted #63728D;
+	text-decoration: none;
 }
 a:hover { border-style: solid; }
 a:visited { color: #8294B7; border-color: #8294B7; }
@@ -17,9 +18,9 @@ a:visited { color: #8294B7; border-color: #8294B7; }
 }
 
 .sitename a {
+	border: none;
 	color: #64728D;
 	font-size: 80px;
-	text-decoration: none;
 	text-shadow: 1px 1px 1px #AAA;
 }
 .sitename a:hover { }
