--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,57 +1,49 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta htt-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>{{ page.title }}</title>
-		<meta name="author" content="Jonathan Bennett" />
-		<link rel="author" href="humans.txt" />
-		
-		<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-		<link rel="stylesheet" href="/css/screen.css" type="text/css" />
-	</head>
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<body>
-		<div class="site">
-			<div class="sitename">
-				<a href="/">Jonathan Bennett</a>
-			</div>
-			
-			<div class="column width25">
-				<div class="panel">
-					<ul class="vmenu">
-						<li><a href="/">Home</a></li>
-						<li><a href="/">Posts</a></li>
-						<li><a href="/">Github</a></li>
-						<li><a href="/">Portfolio</a></li>
-					</ul>
-				</div>
-				
-				<div class="panel">
-					<h2>Latest Posts</h2>
-					
-					<ul class="vmenu">
-						<li><a href="#">Title</a> - July 21</li>
-						<li><a href="#">Title</a> - July 05</li>
-						<li><a href="#">Title</a> - June 27</li>
-					</ul>
-				</div>
-			</div>
-			
-			<div class="body width75">
-				{{ content }}
-			</div>
-			
-			<div class="clear"></div>
-			
-			<div class="footer">
-				Contact Me:
-				<ul class="hmenu">
-					<li><a href="mailto:jbennett@ccistudios.com">jbennett@ccistudios.com</a></li>
-					<li><a href="mailto:me@jbennett.me">me@jbennett.me</a></li>
-					<li><a href="http://github.com/jbennett/">github.com/jbennett</a></li>
-					<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
-				</ul>
-			</div>
+	<title>{{ page.title }}</title>
+	<meta name="author" content="Jonathan Bennett">
+
+	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- CSS: implied media="all" -->
+	<link rel="stylesheet" href="css/html5.css">
+	<link rel="stylesheet" href="css/html5.css">
+</head>
+
+<body>
+	<div id="container">
+		<header>
+
+		</header>
+
+		<div id="main" role="main">
+
 		</div>
-	</body>
+
+		<footer>
+		</footer>
+	</div> <!--! end of #container -->
+
+	<!-- not using js
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>-->
+
+	<!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
+	<script>
+		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
+		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+			g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+			s.parentNode.insertBefore(g,s)
+		}(document,'script'));
+	</script>
+</body>
 </html>
