--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,44 @@
 <body>
 	<div id="container">
 		<header>
-
+			Jonathan Bennett
 		</header>
 
 		<div id="main" role="main">
-
+			<section id="content">
+				{{ content }}
+			</section>
+			
+			<aside>
+				<div>
+					<h2>The Author</h2>
+					<p>My name is Jonathan Bennett. I am a web developer from Sarnia, Ontario, Canada. I've work for <a href="http://ccistudios.com">CCI Studios</a> since 2009 where I build websites using Joomla! and contribute to the Nooku project.</p>
+				</div>
+				
+				<nav>
+					<ul>
+						<li><a href="#">Title</a> - July 24</li>
+						<li><a href="#">Title</a> - July 24</li>
+						<li><a href="#">Title</a> - July 24</li>
+						<li><a href="#">Title</a> - July 24</li>
+						<li><a href="#">View More Posts</a></li>
+					</ul>
+				</nav>
+				
+				<h2>Contact me</h2>
+				<nav class="horizontal">
+					<ul>
+						<li><a href="mailto:jbennett@ccistudios.com">jbennett@ccistudios.com</a></li>
+						<li><a href="mailto:me@jbennett.me">me@jbennett.me</a></li>
+						<li><a href="http://github.com/jbennett/">github.com/jbennett</a></li>
+						<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
+					</ul>
+				</nav>
+			</aside>
 		</div>
 
 		<footer>
+			
 		</footer>
 	</div> <!--! end of #container -->
 
