Added screen css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
 	<!-- CSS: implied media="all" -->
 	<link rel="stylesheet" href="css/html5.css">
-	<link rel="stylesheet" href="css/html5.css">
+	<link rel="stylesheet" href="css/screen.css">
 </head>
 
 <body>
