--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 <body>
 	<div id="container">
 		<header>
-			Jonathan Bennett
+			<a href="/">Jonathan Bennett</a>
 		</header>
 
 		<div id="main" role="main">
@@ -33,10 +33,19 @@
 			<aside>
 				<div>
 					<h2>The Author</h2>
-					<p>My name is Jonathan Bennett. I am a web developer from Sarnia, Ontario, Canada. I've work for <a href="http://ccistudios.com">CCI Studios</a> since 2009 where I build websites using Joomla! and contribute to the Nooku project.</p>
+					<p>My name is Jonathan Bennett. I am a web developer from Sarnia, Ontario, Canada. I've work for <a href="http://ccistudios.com">CCI Studios</a> since 2009 where I build websites using Joomla! and contribute to the open source project named Nooku project.</p>
 				</div>
 				
 				<nav>
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/posts.html">Posts</a></li>
+						<li><a href="/profile.html">Profile</a></li>
+					</ul>
+				</nav>
+				
+				<nav>
+					<h2>Previous Posts</h2>
 					<ul>
 						<li><a href="#">Title</a> - July 24</li>
 						<li><a href="#">Title</a> - July 24</li>
