Fixed css includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- CSS: implied media="all" -->
-	<link rel="stylesheet" href="css/html5.css">
-	<link rel="stylesheet" href="css/screen.css">
+	<link rel="stylesheet" href="/css/html5.css">
+	<link rel="stylesheet" href="/css/screen.css">
 </head>
 
 <body>
