--- a/_includes/post.html
+++ b/_includes/post.html
@@ -14,7 +14,7 @@
 	<footer>
 		<p>
 			{% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
-			{% capture current_year}{{ site.time | date: '%Y' }}{% endcapture %}
+			{% capture current_year %}{{ site.time | date: '%Y' }}{% endcapture %}
 			{% if post_year != current_year %}
 				{% capture date_format %}%A, %B %e %Y{% endcapture %}
 			{% else %}
