--- a/_includes/post.html
+++ b/_includes/post.html
@@ -19,7 +19,7 @@
 
 		    // The following are highly recommended additional parameters. Remove the slashes in front to use.
 		    var disqus_identifier = '{{ post.id }}';
-		    var disqus_url = '{{ post.url }}';
+		    var disqus_url = '{{ site.url }}/{{ post.url }}';
 
 		    /* * * DON'T EDIT BELOW THIS LINE * * */
 		    (function() {
