--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 <body>
 	<div id="container">
-		<header>
+		<header class="sitetitle">
 			<a href="/">Jonathan Bennett</a>
 		</header>
 
@@ -30,7 +30,7 @@
 				{{ content }}
 			</section>
 			
-			<aside>
+			<aside><div>
 				<div>
 					<h2>The Author</h2>
 					<p>My name is Jonathan Bennett. I am a web developer from Sarnia, Ontario, Canada. I've work for <a href="http://ccistudios.com">CCI Studios</a> since 2009 where I build websites using Joomla! and contribute to the open source project named Nooku project.</p>
@@ -67,7 +67,7 @@
 						<li><a href="http://twitter.com/jonbca7">twitter.com/jonbca7</a></li>
 					</ul>
 				</nav>
-			</aside>
+			</div></aside>
 		</div>
 
 		<footer>
