--- a/css/screen.css
+++ b/css/screen.css
@@ -26,10 +26,12 @@ h1 {
 }
 
 h2 {
+	border-bottom: 1px solid #64728D;
 	font-size: 18px;
 }
 
 h3, h4, h5, h6 {
+	border-bottom: 1px solid #64728D;
 	font-size: 14px;
 }
 
