--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
 				</div>
 				
 				<nav>
+					<h2>Menu</h2>
 					<ul>
 						<li><a href="/">Home</a></li>
 						<li><a href="/posts.html">Posts</a></li>
