--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,10 @@
 								{{ post.date | date_to_long_string }}
 							</li>
 						{% endfor %}
-						
-						<li><a href="/posts.html">View More Posts</a></li>
 					</ul>
+					<div class="readmore">
+						<a href="/posts.html">View More Posts</a>
+					</div>
 				</nav>
 				
 				<h2>Contact me</h2>
