Added Google account verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
 	<!-- CSS: implied media="all" -->
 	<link rel="stylesheet" href="/css/html5.css">
 	<link rel="stylesheet" href="/css/screen.css">
+	
+	<!-- Google Verification -->
+	<meta name="google-site-verification" content="EBuh-r3Ng253RpIo5olwB8x29zDOIYDB6kguB3X2OR8" />
 </head>
 
 <body>
